<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuCameraEdit"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/camera_item_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuEditBackground"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit_item_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuNew"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_item_new"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menuSave"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_item_save"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menuDelete"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_item_delete"
        app:showAsAction="withText" />
</menu>