<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ln_EditNote"
    tools:context=".activity.AddNoteActivity"
    android:padding="10dp">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_EditImageNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:paddingRight="20dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/Alarm_Date_Time"
            android:text="@string/tv_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_EditNowDate"/>
        <TextView
            android:paddingLeft="10dp"
            style="@style/Alarm_Date_Time"
            android:text="@string/tv_Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_EditNowTime"/>
    </LinearLayout>
    <EditText
        android:id="@+id/et_EditTittle"
        style="@style/EditTextTittle"
        android:hint="@string/tv_Tittle"
        android:lineSpacingMultiplier="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/et_EditConttent"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_Conttent"
        style="@style/EditTextConttent"/>
    <LinearLayout
        android:id="@+id/ln_Tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">
        <ImageView
            android:paddingLeft="10dp"
            android:id="@+id/iv_EditClock"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_alram"/>
        <TextView
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:id="@+id/tv_EditArlarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            style="@style/Alarm_Date_Time"
            android:text="@string/alram"
            />
        <Spinner
            android:visibility="invisible"
            android:id="@+id/spn_EditDateClock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.8">
        </Spinner>
        <Spinner
            android:visibility="invisible"
            android:id="@+id/spn_EditTimeClock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.2">
        </Spinner>

        <ImageButton
            android:id="@+id/ib_EditCloseClock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:src="@mipmap/ic_close_alram"
            android:visibility="invisible" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <android.support.design.widget.BottomNavigationView
            android:id="@+id/menuBottom"
            app:menu="@menu/menu_bottom_edit_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
        </android.support.design.widget.BottomNavigationView>
    </RelativeLayout>

</LinearLayout>